# pylibssp

./: .cibuildwheel.toml  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: api.md
example/: README_dumph26x.md  README_example.md  README_preview.md  dump_h26x.py  example.py  preview.py
libssp/: __init__.py  _libssp.cpp  sspclient.py
test/: example.py
tests/: README_example.md  example.py  test_import.py
