[metadata]
name = libssp
version = 0.1.0
author = Jack-vexel
description = Python binding for libssp.dll
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = False
zip_safe = False
python_requires = >=3.7

[options.package_data]
libssp = *.dll

[options.exclude_package_data]
libssp =
    include/*
    lib/*
    
[build_ext]
inplace = 1
