[metadata]
name = libssp
version = 0.1.0
author = Jack-vexel
author_email = jack.vexel@gmail.com
url = https://github.com/Jack-vexel-ws/pylibssp
description = Python wrapper for libssp
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
zip_safe = False
python_requires = >=3.7

[options.package_data]
#don't specify any files here, let setup.py completely control file copying

[options.exclude_package_data]
libssp =
    include/*
    lib/*
    _libssp.cpp
    
[build_ext]
inplace = 1
