[metadata]
name = libssp
version = 0.1.0
author = Jack-vexel
author_email = jack.vexel@gmail.com
url = https://github.com/Jack-vexel-ws/pylibssp
description = Python wrapper for c++ libssp library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = False
zip_safe = False
python_requires = >=3.7
license_files = LICENSE

[options.package_data]
# specify libssp library files which will be included in the package
libssp = libssp.dll, libssp.so, libssp.dylib

[options.exclude_package_data]
# exclude libssp.cpp file from the package
libssp = _libssp.cpp
